# ChangeLog for sci-libs/scipy
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-libs/scipy/ChangeLog,v 1.105 2013/11/28 14:18:05 jlec Exp $

*scipy-0.13.1 (28 Nov 2013)

  28 Nov 2013; Justin Lecher <jlec@gentoo.org> +scipy-0.13.1.ebuild:
  Version Bump

  02 Nov 2013; Justin Lecher <jlec@gentoo.org> -scipy-0.9.0-r1.ebuild,
  -scipy-0.12.0.ebuild:
  Drop vulnerable versions, #488048

  02 Nov 2013; Agostino Sarubbo <ago@gentoo.org> scipy-0.12.1.ebuild:
  Stable for x86, wrt bug #488048

*scipy-0.13.0 (28 Oct 2013)

  28 Oct 2013; Sébastien Fabbro <bicatali@gentoo.org> +scipy-0.13.0.ebuild:
  Version bump

  23 Oct 2013; Agostino Sarubbo <ago@gentoo.org> scipy-0.12.1.ebuild:
  Stable for ppc64, wrt bug #488048

  22 Oct 2013; Agostino Sarubbo <ago@gentoo.org> scipy-0.12.1.ebuild:
  Stable for ppc, wrt bug #488048

  19 Oct 2013; Agostino Sarubbo <ago@gentoo.org> scipy-0.12.1.ebuild:
  Stable for amd64, wrt bug #488048

*scipy-0.12.1 (13 Oct 2013)

  13 Oct 2013; Justin Lecher <jlec@gentoo.org> +scipy-0.12.1.ebuild,
  metadata.xml:
  Version Bump

  10 Sep 2013; Patrick Lauer <patrick@gentoo.org> scipy-0.12.0.ebuild:
  Whitespace

  05 Sep 2013; Michał Górny <mgorny@gentoo.org> scipy-0.12.0.ebuild:
  Clean up PYTHON_COMPAT from old implementations.

  27 Aug 2013; Sébastien Fabbro <bicatali@gentoo.org> scipy-0.12.0.ebuild:
  Remove trailing spaces from pkg-config calls (bug #444104)

  17 Jun 2013; Sébastien Fabbro <bicatali@gentoo.org>
  -files/scipy-0.11.0-test_basic.patch, -scipy-0.11.0-r1.ebuild, metadata.xml,
  scipy-0.9.0-r1.ebuild:
  Change umfpack flag to sparse for consistency

  09 Jun 2013; Mike Gilbert <floppym@gentoo.org> scipy-0.11.0-r1.ebuild,
  scipy-0.12.0.ebuild:
  Depend on virtual/python-imaging.

  19 May 2013; Justin Lecher <jlec@gentoo.org> metadata.xml:
  Add missing local use description, #469532

  29 Apr 2013; Sébastien Fabbro <bicatali@gentoo.org> scipy-0.12.0.ebuild: