@@ -1,6 +1,9 @@
 # ChangeLog for sci-libs/scipy
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-libs/scipy/ChangeLog,v 1.105 2013/11/28 14:18:05 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-libs/scipy/ChangeLog,v 1.106 2013/11/29 07:01:24 jlec Exp $
+
+  29 Nov 2013; Justin Lecher <jlec@gentoo.org> scipy-0.13.1.ebuild:
+  Fix doc installation, #492808
 
 *scipy-0.13.1 (28 Nov 2013)
 
